--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="{% static 'CSS/styles.min.css' %}">
   </head>
   <body>
+    <ul>
+      {% for post in most_popular_posts %}
+        <li>{{ post.title }} <br /> </li>
+      {% endfor %}
+    </ul>
     <!--================Header Menu Area =================-->
     <header class="header_area">
       <div class="main_menu">
@@ -64,11 +69,11 @@
             <div class="flex-fill" style="margin-right: 30px;">
               <div class="card blog__slide text-center">
                 <div class="blog__slide__img">
-                  <img class="card-img rounded-0" src="{% static 'blog/blog-slider/blog-slide1.png' %}" alt="">
+                  <img class="card-img rounded-0" src="{{ most_popular_posts.0.image_url }}" alt="">
                 </div>
                 <div class="blog__slide__content">
-                  <h3><a href="#">New york fashion week's continued the evolution</a></h3>
-                  <p>2 days ago</p>
+                  <h3><a href="#">{{ most_popular_posts.0.title }}</a></h3>
+                  <p>{{ most_popular_posts.0.published_at }}</p>
                 </div>
               </div>
             </div>
@@ -76,11 +81,11 @@
             <div class="flex-fill" style="margin-right: 30px;">
               <div class="card blog__slide text-center">
                 <div class="blog__slide__img">
-                  <img class="card-img rounded-0" src="{% static 'blog/blog-slider/blog-slide2.png' %}" alt="">
+                  <img class="card-img rounded-0" src="{{ most_popular_posts.1.image_url }}" alt="">
                 </div>
                 <div class="blog__slide__content">
-                  <h3><a href="#">New york fashion week's continued the evolution</a></h3>
-                  <p>2 days ago</p>
+                  <h3><a href="#">{{ most_popular_posts.1.title }}</a></h3>
+                  <p>{{ most_popular_posts.1.published_at }}</p>
                 </div>
               </div>
             </div>
@@ -88,11 +93,11 @@
             <div class="flex-fill">
               <div class="card blog__slide text-center">
                 <div class="blog__slide__img">
-                  <img class="card-img rounded-0" src="{% static 'blog/blog-slider/blog-slide3.png' %}" alt="">
+                  <img class="card-img rounded-0" src="{{ most_popular_posts.2.image_url }}" alt="">
                 </div>
                 <div class="blog__slide__content">
-                  <h3><a href="#">New york fashion week's continued the evolution</a></h3>
-                  <p>2 days ago</p>
+                  <h3><a href="#">{{ most_popular_posts.2.title }}</a></h3>
+                  <p>{{ most_popular_posts.2.published_at }}</p>
                 </div>
               </div>
             </div>
