render posts on index page.

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="{% static 'CSS/styles.min.css' %}">
   </head>
   <body>
+    <ul>
+      {% for post in fresh_posts %}
+        <li>{{ post.title }} <br /> </li>
+      {% endfor %}
+    </ul>
     <!--================Header Menu Area =================-->
     <header class="header_area">
       <div class="main_menu">
@@ -64,7 +69,11 @@
             <div class="flex-fill" style="margin-right: 30px;">
               <div class="card blog__slide text-center">
                 <div class="blog__slide__img">
+                  {% if most_popular_posts.0.image_url %}
                   <img class="card-img rounded-0" src="{{ most_popular_posts.0.image_url }}" alt="">
+                  {% else %}
+                  <img class="card-img rounded-0" src="{% static 'img/banner/blog.png' %}" alt="">
+                  {% endif %}
                 </div>
                 <div class="blog__slide__content">
                   <h3><a href="#">{{ most_popular_posts.0.title }}</a></h3>
@@ -76,7 +85,11 @@
             <div class="flex-fill" style="margin-right: 30px;">
               <div class="card blog__slide text-center">
                 <div class="blog__slide__img">
+                  {% if most_popular_posts.1.image_url %}
                   <img class="card-img rounded-0" src="{{ most_popular_posts.1.image_url }}" alt="">
+                  {% else %}
+                  <img class="card-img rounded-0" src="{% static 'img/banner/blog.png' %}" alt="">
+                  {% endif %}
                 </div>
                 <div class="blog__slide__content">
                   <h3><a href="#">{{ most_popular_posts.1.title }}</a></h3>
@@ -88,7 +101,11 @@
             <div class="flex-fill">
               <div class="card blog__slide text-center">
                 <div class="blog__slide__img">
+                  {% if most_popular_posts.2.image_url %}
                   <img class="card-img rounded-0" src="{{ most_popular_posts.2.image_url }}" alt="">
+                  {% else %}
+                  <img class="card-img rounded-0" src="{% static 'img/banner/blog.png' %}" alt="">
+                  {% endif %}
                 </div>
                 <div class="blog__slide__content">
                   <h3><a href="#">{{ most_popular_posts.2.title }}</a></h3>
@@ -108,64 +125,100 @@
             <div class="col-lg-8">
               <div class="single-recent-blog-post">
                 <div class="thumb">
-                  <img class="img-fluid" src="{% static 'blog/blog1.png' %}" alt="">
+                  {% if fresh_posts.0.image_url %}
+                  <img class="img-fluid" src="{{ fresh_posts.0.image_url }}" alt="">
+                  {% else %}
+                  <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="">
+                  {% endif %}
                   <ul class="thumb-info">
-                    <li><a href="#"><i class="ti-user"></i>Admin</a></li>
-                    <li><a href="#"><i class="ti-notepad"></i>January 12,2019</a></li>
-                    <li><a href="#"><i class="ti-themify-favicon"></i>2 Comments</a></li>
+                    <li><a href="#"><i class="ti-user"></i>{{ fresh_posts.0.author }}</a></li>
+                    <li><a href="#"><i class="ti-notepad"></i>{{ fresh_posts.0.published_at }}</a></li>
+                    <li><a href="#"><i class="ti-themify-favicon"></i>{{ fresh_posts.0.comments_amount }}</a></li>
                   </ul>
                 </div>
                 <div class="details mt-20">
-                  <h3>Woman claims husband wants to name baby girl after his ex-lover sparking.</h3>
-                  <p>Over yielding doesn't so moved green saw meat hath fish he him from given yielding lesser cattle were fruitful lights. Given let have, lesser their made him above gathered dominion sixth. Creeping deep said can't called second. Air created seed heaven sixth created living</p>
+                  <h3>{{ fresh_posts.0.title }}</h3>
+                  <p>{{ fresh_posts.0.text }}</p>
                   <a class="button" href="#">Read More <i class="ti-arrow-right"></i></a>
                 </div>
               </div>
 
               <div class="single-recent-blog-post">
                 <div class="thumb">
-                  <img class="img-fluid" src="{% static 'blog/blog2.png' %}" alt="">
+                  {% if fresh_posts.1.image_url %}
+                  <img class="img-fluid" src="{{ fresh_posts.1.image_url }}" alt="">
+                  {% else %}
+                  <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="">
+                  {% endif %}
                   <ul class="thumb-info">
-                    <li><a href="#"><i class="ti-user"></i>Admin</a></li>
-                    <li><a href="#"><i class="ti-notepad"></i>January 12,2019</a></li>
-                    <li><a href="#"><i class="ti-themify-favicon"></i>2 Comments</a></li>
+                    <li><a href="#"><i class="ti-user"></i>{{ fresh_posts.1.author }}</a></li>
+                    <li><a href="#"><i class="ti-notepad"></i>{{ fresh_posts.1.published_at }}</a></li>
+                    <li><a href="#"><i class="ti-themify-favicon"></i>{{ fresh_posts.1.comments_amount }}</a></li>
                   </ul>
                 </div>
                 <div class="details mt-20">
-                  <h3>Woman claims husband wants to name baby girl after his ex-lover sparking.</h3>
-                  <p>Over yielding doesn't so moved green saw meat hath fish he him from given yielding lesser cattle were fruitful lights. Given let have, lesser their made him above gathered dominion sixth. Creeping deep said can't called second. Air created seed heaven sixth created living</p>
+                  <h3>{{ fresh_posts.1.title }}</h3>
+                  <p>{{ fresh_posts.1.text }}</p>
                   <a class="button" href="#">Read More <i class="ti-arrow-right"></i></a>
                 </div>
               </div>
 
               <div class="single-recent-blog-post">
                 <div class="thumb">
-                  <img class="img-fluid" src="{% static 'blog/blog3.png' %}" alt="">
+                  {% if fresh_posts.2.image_url %}
+                  <img class="img-fluid" src="{{ fresh_posts.2.image_url }}" alt="">
+                  {% else %}
+                  <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="">
+                  {% endif %}
                   <ul class="thumb-info">
-                    <li><a href="#"><i class="ti-user"></i>Admin</a></li>
-                    <li><a href="#"><i class="ti-notepad"></i>January 12,2019</a></li>
-                    <li><a href="#"><i class="ti-themify-favicon"></i>2 Comments</a></li>
+                    <li><a href="#"><i class="ti-user"></i>{{ fresh_posts.2.author }}</a></li>
+                    <li><a href="#"><i class="ti-notepad"></i>{{ fresh_posts.2.published_at }}</a></li>
+                    <li><a href="#"><i class="ti-themify-favicon"></i>{{ fresh_posts.2.comments_amount }}</a></li>
                   </ul>
                 </div>
                 <div class="details mt-20">
-                  <h3>Tourist deaths in Costa Rica jeopardize safe destination reputation all time. </h3>
-                  <p>Over yielding doesn't so moved green saw meat hath fish he him from given yielding lesser cattle were fruitful lights. Given let have, lesser their made him above gathered dominion sixth. Creeping deep said can't called second. Air created seed heaven sixth created living</p>
+                  <h3>{{ fresh_posts.2.title }}</h3>
+                  <p>{{ fresh_posts.2.text }}</p>
                   <a class="button" href="#">Read More <i class="ti-arrow-right"></i></a>
                 </div>
               </div>
 
               <div class="single-recent-blog-post">
                 <div class="thumb">
-                  <img class="img-fluid" src="{% static 'blog/blog4.png' %}" alt="">
+                  {% if fresh_posts.3.image_url %}
+                  <img class="img-fluid" src="{{ fresh_posts.3.image_url }}" alt="">
+                  {% else %}
+                  <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="">
+                  {% endif %}
                   <ul class="thumb-info">
-                    <li><a href="#"><i class="ti-user"></i>Admin</a></li>
-                    <li><a href="#"><i class="ti-notepad"></i>January 12,2019</a></li>
-                    <li><a href="#"><i class="ti-themify-favicon"></i>2 Comments</a></li>
+                    <li><a href="#"><i class="ti-user"></i>{{ fresh_posts.3.author }}</a></li>
+                    <li><a href="#"><i class="ti-notepad"></i>{{ fresh_posts.3.published_at }}</a></li>
+                    <li><a href="#"><i class="ti-themify-favicon"></i>{{ fresh_posts.3.comments_amount }}</a></li>
                   </ul>
                 </div>
                 <div class="details mt-20">
-                <h3>Tourist deaths in Costa Rica jeopardize safe destination reputation all time.  </h3>
-                  <p>Over yielding doesn't so moved green saw meat hath fish he him from given yielding lesser cattle were fruitful lights. Given let have, lesser their made him above gathered dominion sixth. Creeping deep said can't called second. Air created seed heaven sixth created living</p>
+                  <h3>{{ fresh_posts.3.title }}</h3>
+                  <p>{{ fresh_posts.3.text }}</p>
+                  <a class="button" href="#">Read More <i class="ti-arrow-right"></i></a>
+                </div>
+              </div>
+
+              <div class="single-recent-blog-post">
+                <div class="thumb">
+                  {% if fresh_posts.4.image_url %}
+                  <img class="img-fluid" src="{{ fresh_posts.4.image_url }}" alt="">
+                  {% else %}
+                  <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="">
+                  {% endif %}
+                  <ul class="thumb-info">
+                    <li><a href="#"><i class="ti-user"></i>{{ fresh_posts.4.author }}</a></li>
+                    <li><a href="#"><i class="ti-notepad"></i>{{ fresh_posts.4.published_at }}</a></li>
+                    <li><a href="#"><i class="ti-themify-favicon"></i>{{ fresh_posts.4.comments_amount }}</a></li>
+                  </ul>
+                </div>
+                <div class="details mt-20">
+                  <h3>{{ fresh_posts.4.title }}</h3>
+                  <p>{{ fresh_posts.4.text }}</p>
                   <a class="button" href="#">Read More <i class="ti-arrow-right"></i></a>
                 </div>
               </div>
