--- a/templates/index.html
+++ b/templates/index.html
@@ -130,7 +130,7 @@
                   {% else %}
                   <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="">
                   {% endif %}
-                  <ul class="thumb-info">
+                  <ul class="thumb-info" style="max-width: 550px;">
                     <li><a href="#"><i class="ti-user"></i>{{ fresh_posts.0.author }}</a></li>
                     <li><a href="#"><i class="ti-notepad"></i>{{ fresh_posts.0.published_at }}</a></li>
                     <li><a href="#"><i class="ti-themify-favicon"></i>{{ fresh_posts.0.comments_amount }}</a></li>
@@ -138,7 +138,7 @@
                 </div>
                 <div class="details mt-20">
                   <h3>{{ fresh_posts.0.title }}</h3>
-                  <p>{{ fresh_posts.0.text }}</p>
+                  <p>{{ fresh_posts.0.text|truncatechars:200 }}</p>
                   <a class="button" href="#">Read More <i class="ti-arrow-right"></i></a>
                 </div>
               </div>
@@ -150,7 +150,7 @@
                   {% else %}
                   <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="">
                   {% endif %}
-                  <ul class="thumb-info">
+                  <ul class="thumb-info" style="max-width: 550px;">
                     <li><a href="#"><i class="ti-user"></i>{{ fresh_posts.1.author }}</a></li>
                     <li><a href="#"><i class="ti-notepad"></i>{{ fresh_posts.1.published_at }}</a></li>
                     <li><a href="#"><i class="ti-themify-favicon"></i>{{ fresh_posts.1.comments_amount }}</a></li>
@@ -158,7 +158,7 @@
                 </div>
                 <div class="details mt-20">
                   <h3>{{ fresh_posts.1.title }}</h3>
-                  <p>{{ fresh_posts.1.text }}</p>
+                  <p>{{ fresh_posts.1.text|truncatechars:200 }}</p>
                   <a class="button" href="#">Read More <i class="ti-arrow-right"></i></a>
                 </div>
               </div>
@@ -170,7 +170,7 @@
                   {% else %}
                   <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="">
                   {% endif %}
-                  <ul class="thumb-info">
+                  <ul class="thumb-info" style="max-width: 550px;">
                     <li><a href="#"><i class="ti-user"></i>{{ fresh_posts.2.author }}</a></li>
                     <li><a href="#"><i class="ti-notepad"></i>{{ fresh_posts.2.published_at }}</a></li>
                     <li><a href="#"><i class="ti-themify-favicon"></i>{{ fresh_posts.2.comments_amount }}</a></li>
@@ -178,7 +178,7 @@
                 </div>
                 <div class="details mt-20">
                   <h3>{{ fresh_posts.2.title }}</h3>
-                  <p>{{ fresh_posts.2.text }}</p>
+                  <p>{{ fresh_posts.2.text|truncatechars:200 }}</p>
                   <a class="button" href="#">Read More <i class="ti-arrow-right"></i></a>
                 </div>
               </div>
@@ -190,7 +190,7 @@
                   {% else %}
                   <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="">
                   {% endif %}
-                  <ul class="thumb-info">
+                  <ul class="thumb-info" style="max-width: 550px;">
                     <li><a href="#"><i class="ti-user"></i>{{ fresh_posts.3.author }}</a></li>
                     <li><a href="#"><i class="ti-notepad"></i>{{ fresh_posts.3.published_at }}</a></li>
                     <li><a href="#"><i class="ti-themify-favicon"></i>{{ fresh_posts.3.comments_amount }}</a></li>
@@ -198,7 +198,7 @@
                 </div>
                 <div class="details mt-20">
                   <h3>{{ fresh_posts.3.title }}</h3>
-                  <p>{{ fresh_posts.3.text }}</p>
+                  <p>{{ fresh_posts.3.text|truncatechars:200 }}</p>
                   <a class="button" href="#">Read More <i class="ti-arrow-right"></i></a>
                 </div>
               </div>
@@ -210,7 +210,7 @@
                   {% else %}
                   <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="">
                   {% endif %}
-                  <ul class="thumb-info">
+                  <ul class="thumb-info" style="max-width: 550px;">
                     <li><a href="#"><i class="ti-user"></i>{{ fresh_posts.4.author }}</a></li>
                     <li><a href="#"><i class="ti-notepad"></i>{{ fresh_posts.4.published_at }}</a></li>
                     <li><a href="#"><i class="ti-themify-favicon"></i>{{ fresh_posts.4.comments_amount }}</a></li>
@@ -218,7 +218,7 @@
                 </div>
                 <div class="details mt-20">
                   <h3>{{ fresh_posts.4.title }}</h3>
-                  <p>{{ fresh_posts.4.text }}</p>
+                  <p>{{ fresh_posts.4.text|truncatechars:200 }}</p>
                   <a class="button" href="#">Read More <i class="ti-arrow-right"></i></a>
                 </div>
               </div>
