--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
           <div class="container box_1620">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <a class="navbar-brand logo_h" href="index.html"><img src="{% static 'logo.png' %}" alt=""></a>
+            <a class="navbar-brand logo_h" href="{% url 'index' %}"><img src="{% static 'logo.png' %}" alt=""></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
@@ -26,8 +26,8 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
               <ul class="nav navbar-nav menu_nav justify-content-center">
-                <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                <li class="nav-item active"><a class="nav-link" href="{% url 'index' %}">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'contact' %}">Contact</a></li>
               </ul>
               <ul class="nav navbar-nav navbar-right navbar-social">
                 <li><a href="#"><i class="ti-facebook"></i></a></li>
@@ -71,7 +71,7 @@
                   {% endif %}
                 </div>
                 <div class="blog__slide__content">
-                  <h3><a href="#">{{ most_popular_posts.0.title }}</a></h3>
+                  <h3><a href="{% url 'post_detail' most_popular_posts.0.slug %}">{{ most_popular_posts.0.title }}</a></h3>
                   <p>{{ most_popular_posts.0.published_at }}</p>
                 </div>
               </div>
@@ -87,7 +87,7 @@
                   {% endif %}
                 </div>
                 <div class="blog__slide__content">
-                  <h3><a href="#">{{ most_popular_posts.1.title }}</a></h3>
+                  <h3><a href="{% url 'post_detail' most_popular_posts.1.slug %}">{{ most_popular_posts.1.title }}</a></h3>
                   <p>{{ most_popular_posts.1.published_at }}</p>
                 </div>
               </div>
@@ -103,7 +103,7 @@
                   {% endif %}
                 </div>
                 <div class="blog__slide__content">
-                  <h3><a href="#">{{ most_popular_posts.2.title }}</a></h3>
+                  <h3><a href="{% url 'post_detail' most_popular_posts.2.slug %}">{{ most_popular_posts.2.title }}</a></h3>
                   <p>{{ most_popular_posts.2.published_at }}</p>
                 </div>
               </div>
@@ -134,7 +134,7 @@
                 <div class="details mt-20">
                   <h3>{{ fresh_posts.0.title }}</h3>
                   <p>{{ fresh_posts.0.text|truncatechars:200 }}</p>
-                  <a class="button" href="#">Read More <i class="ti-arrow-right"></i></a>
+                  <a class="button" href="{% url 'post_detail' fresh_posts.0.slug %}">Read More <i class="ti-arrow-right"></i></a>
                 </div>
               </div>
 
@@ -154,7 +154,7 @@
                 <div class="details mt-20">
                   <h3>{{ fresh_posts.1.title }}</h3>
                   <p>{{ fresh_posts.1.text|truncatechars:200 }}</p>
-                  <a class="button" href="#">Read More <i class="ti-arrow-right"></i></a>
+                  <a class="button" href="{% url 'post_detail' fresh_posts.1.slug %}">Read More <i class="ti-arrow-right"></i></a>
                 </div>
               </div>
 
@@ -174,7 +174,7 @@
                 <div class="details mt-20">
                   <h3>{{ fresh_posts.2.title }}</h3>
                   <p>{{ fresh_posts.2.text|truncatechars:200 }}</p>
-                  <a class="button" href="#">Read More <i class="ti-arrow-right"></i></a>
+                  <a class="button" href="{% url 'post_detail' fresh_posts.2.slug %}">Read More <i class="ti-arrow-right"></i></a>
                 </div>
               </div>
 
@@ -194,7 +194,7 @@
                 <div class="details mt-20">
                   <h3>{{ fresh_posts.3.title }}</h3>
                   <p>{{ fresh_posts.3.text|truncatechars:200 }}</p>
-                  <a class="button" href="#">Read More <i class="ti-arrow-right"></i></a>
+                  <a class="button" href="{% url 'post_detail' fresh_posts.3.slug %}">Read More <i class="ti-arrow-right"></i></a>
                 </div>
               </div>
 
@@ -214,7 +214,7 @@
                 <div class="details mt-20">
                   <h3>{{ fresh_posts.4.title }}</h3>
                   <p>{{ fresh_posts.4.text|truncatechars:200 }}</p>
-                  <a class="button" href="#">Read More <i class="ti-arrow-right"></i></a>
+                  <a class="button" href="{% url 'post_detail' fresh_posts.4.slug %}">Read More <i class="ti-arrow-right"></i></a>
                 </div>
               </div>
               
