add "alt" for images

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,9 +26,9 @@
               <div class="card blog__slide text-center">
                 <div class="blog__slide__img">
                   {% if most_popular_posts.0.image_url %}
-                  <img class="card-img rounded-0" src="{{ most_popular_posts.0.image_url }}" alt="">
+                  <img class="card-img rounded-0" src="{{ most_popular_posts.0.image_url }}" alt="image post">
                   {% else %}
-                  <img class="card-img rounded-0" src="{% static 'img/banner/blog.png' %}" alt="">
+                  <img class="card-img rounded-0" src="{% static 'img/banner/blog.png' %}" alt="default image">
                   {% endif %}
                 </div>
                 <div class="blog__slide__content">
@@ -42,9 +42,9 @@
               <div class="card blog__slide text-center">
                 <div class="blog__slide__img">
                   {% if most_popular_posts.1.image_url %}
-                  <img class="card-img rounded-0" src="{{ most_popular_posts.1.image_url }}" alt="">
+                  <img class="card-img rounded-0" src="{{ most_popular_posts.1.image_url }}" alt="image post">
                   {% else %}
-                  <img class="card-img rounded-0" src="{% static 'img/banner/blog.png' %}" alt="">
+                  <img class="card-img rounded-0" src="{% static 'img/banner/blog.png' %}" alt="default image">
                   {% endif %}
                 </div>
                 <div class="blog__slide__content">
@@ -58,9 +58,9 @@
               <div class="card blog__slide text-center">
                 <div class="blog__slide__img">
                   {% if most_popular_posts.2.image_url %}
-                  <img class="card-img rounded-0" src="{{ most_popular_posts.2.image_url }}" alt="">
+                  <img class="card-img rounded-0" src="{{ most_popular_posts.2.image_url }}" alt="image post">
                   {% else %}
-                  <img class="card-img rounded-0" src="{% static 'img/banner/blog.png' %}" alt="">
+                  <img class="card-img rounded-0" src="{% static 'img/banner/blog.png' %}" alt="default image">
                   {% endif %}
                 </div>
                 <div class="blog__slide__content">
@@ -82,9 +82,9 @@
               <div class="single-recent-blog-post">
                 <div class="thumb">
                   {% if fresh_posts.0.image_url %}
-                  <img class="img-fluid" src="{{ fresh_posts.0.image_url }}" alt="">
+                  <img class="img-fluid" src="{{ fresh_posts.0.image_url }}" alt="image post">
                   {% else %}
-                  <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="">
+                  <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="default image">
                   {% endif %}
                   <ul class="thumb-info" style="max-width: 550px;">
                     <li><a href="#"><i class="ti-user"></i>{{ fresh_posts.0.author }}</a></li>
@@ -102,9 +102,9 @@
               <div class="single-recent-blog-post">
                 <div class="thumb">
                   {% if fresh_posts.1.image_url %}
-                  <img class="img-fluid" src="{{ fresh_posts.1.image_url }}" alt="">
+                  <img class="img-fluid" src="{{ fresh_posts.1.image_url }}" alt="image post">
                   {% else %}
-                  <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="">
+                  <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="default image">
                   {% endif %}
                   <ul class="thumb-info" style="max-width: 550px;">
                     <li><a href="#"><i class="ti-user"></i>{{ fresh_posts.1.author }}</a></li>
@@ -122,9 +122,9 @@
               <div class="single-recent-blog-post">
                 <div class="thumb">
                   {% if fresh_posts.2.image_url %}
-                  <img class="img-fluid" src="{{ fresh_posts.2.image_url }}" alt="">
+                  <img class="img-fluid" src="{{ fresh_posts.2.image_url }}" alt="image post">
                   {% else %}
-                  <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="">
+                  <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="default image">
                   {% endif %}
                   <ul class="thumb-info" style="max-width: 550px;">
                     <li><a href="#"><i class="ti-user"></i>{{ fresh_posts.2.author }}</a></li>
@@ -142,9 +142,9 @@
               <div class="single-recent-blog-post">
                 <div class="thumb">
                   {% if fresh_posts.3.image_url %}
-                  <img class="img-fluid" src="{{ fresh_posts.3.image_url }}" alt="">
+                  <img class="img-fluid" src="{{ fresh_posts.3.image_url }}" alt="image post">
                   {% else %}
-                  <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="">
+                  <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="default image">
                   {% endif %}
                   <ul class="thumb-info" style="max-width: 550px;">
                     <li><a href="#"><i class="ti-user"></i>{{ fresh_posts.3.author }}</a></li>
@@ -162,9 +162,9 @@
               <div class="single-recent-blog-post">
                 <div class="thumb">
                   {% if fresh_posts.4.image_url %}
-                  <img class="img-fluid" src="{{ fresh_posts.4.image_url }}" alt="">
+                  <img class="img-fluid" src="{{ fresh_posts.4.image_url }}" alt="image post">
                   {% else %}
-                  <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="">
+                  <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="default image">
                   {% endif %}
                   <ul class="thumb-info" style="max-width: 550px;">
                     <li><a href="#"><i class="ti-user"></i>{{ fresh_posts.4.author }}</a></li>
