--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,6 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>{% block title %}{% endblock %}</title>
         <link rel="icon" href="{% static 'favicon.png' %}" type='image/png'>
-    
         <link rel="stylesheet" href="{% static 'CSS/styles.min.css' %}">
     </head>
     <body>
@@ -17,7 +16,7 @@
             <nav class="navbar navbar-expand-lg navbar-light">
               <div class="container box_1620">
                 <!-- Brand and toggle get grouped for better mobile display -->
-                <a class="navbar-brand logo_h" href="{% url 'index' %}"><img src="{% static 'logo.png' %}" alt=""></a>
+                <a class="navbar-brand logo_h" href="{% url 'index' %}"><img src="{% static 'logo.png' %}" alt="Sensive"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
@@ -76,7 +75,6 @@
                       <div style="position: absolute; left: -5000px;">
                         <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
                       </div>
-  
                     </div>
                     <div class="info"></div>
                   </form>
