fixed the footer on the post page

--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -55,6 +55,7 @@
                 </div>
               </div>
             </div>
+
             
 
             <div class="comments-area">
@@ -78,7 +79,7 @@
               </div>		                                             				
             </div>
           </div>
-    <!--================ End Blog Post Area =================-->
+
 
           <!-- Start Blog Post Siddebar -->
           <div class="col-lg-4 sidebar-widgets">
@@ -100,6 +101,9 @@
               </div>
             </div>
           </div>
-        </div>
           <!-- End Blog Post Siddebar -->
+        </div>
+      </div>
+    </section>
+    <!--================ End Blog Post Area =================-->
 {% endblock %}
