Highlighted the contents of block tags

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -25,7 +25,8 @@
 <section class="section-margin--small section-margin">
   <div class="container">
     <div class="d-none d-sm-block mb-5 pb-4">
-      <div> {{ html_map|safe }} 
+      <div> 
+        {{ html_map|safe }} 
       </div>
     </div>
 
