Templated popular and fresh posts

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,53 +22,23 @@
     <section>
       <div class="container">
         <div class="d-flex">
-          <div class="flex-fill" style="margin-right: 30px;">
-            <div class="card blog__slide text-center">
-              <div class="blog__slide__img">
-                {% if most_popular_posts.0.image_url %}
-                  <img class="card-img rounded-0" src="{{ most_popular_posts.0.image_url }}" alt="image post">
-                {% else %}
-                  <img class="card-img rounded-0" src="{% static 'img/banner/blog.png' %}" alt="default image">
-                {% endif %}
-              </div>
-              <div class="blog__slide__content">
-                <h3><a href="{% url 'post_detail' most_popular_posts.0.slug %}">{{ most_popular_posts.0.title }}</a></h3>
-                <p>{{ most_popular_posts.0.published_at }}</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="flex-fill" style="margin-right: 30px;">
-            <div class="card blog__slide text-center">
-              <div class="blog__slide__img">
-                {% if most_popular_posts.1.image_url %}
-                  <img class="card-img rounded-0" src="{{ most_popular_posts.1.image_url }}" alt="image post">
-                {% else %}
-                  <img class="card-img rounded-0" src="{% static 'img/banner/blog.png' %}" alt="default image">
-                {% endif %}
-              </div>
-              <div class="blog__slide__content">
-                <h3><a href="{% url 'post_detail' most_popular_posts.1.slug %}">{{ most_popular_posts.1.title }}</a></h3>
-                <p>{{ most_popular_posts.1.published_at }}</p>
+          {% for post in most_popular_posts %}
+            <div class="flex-fill" style="margin-right: 30px;">
+              <div class="card blog__slide text-center">
+                <div class="blog__slide__img">
+                  {% if post.image_url %}
+                    <img class="card-img rounded-0" src="{{ post.image_url }}" alt="image post">
+                  {% else %}
+                    <img class="card-img rounded-0" src="{% static 'img/banner/blog.png' %}" alt="default image">
+                  {% endif %}
+                </div>
+                <div class="blog__slide__content">
+                  <h3><a href="{% url 'post_detail' post.slug %}">{{ post.title }}</a></h3>
+                  <p>{{ post.published_at }}</p>
+                </div>
               </div>
             </div>
-          </div>
-
-          <div class="flex-fill">
-            <div class="card blog__slide text-center">
-              <div class="blog__slide__img">
-                {% if most_popular_posts.2.image_url %}
-                  <img class="card-img rounded-0" src="{{ most_popular_posts.2.image_url }}" alt="image post">
-                {% else %}
-                  <img class="card-img rounded-0" src="{% static 'img/banner/blog.png' %}" alt="default image">
-                {% endif %}
-              </div>
-              <div class="blog__slide__content">
-                <h3><a href="{% url 'post_detail' most_popular_posts.2.slug %}">{{ most_popular_posts.2.title }}</a></h3>
-                <p>{{ most_popular_posts.2.published_at }}</p>
-              </div>
-            </div>
-          </div>
+          {% endfor %}
         </div>
       </div>
     </section>
@@ -79,106 +49,27 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8">
-            <div class="single-recent-blog-post">
-              <div class="thumb">
-                {% if fresh_posts.0.image_url %}
-                  <img class="img-fluid" src="{{ fresh_posts.0.image_url }}" alt="image post">
-                {% else %}
-                  <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="default image">
-                {% endif %}
-                <ul class="thumb-info" style="max-width: 550px;">
-                  <li><a href="#"><i class="ti-user"></i>{{ fresh_posts.0.author }}</a></li>
-                  <li><a href="#"><i class="ti-notepad"></i>{{ fresh_posts.0.published_at }}</a></li>
-                  <li><a href="#"><i class="ti-themify-favicon"></i>{{ fresh_posts.0.comments_amount }}</a></li>
-                </ul>
+            {% for post in fresh_posts %}
+              <div class="single-recent-blog-post">
+                <div class="thumb">
+                  {% if post.image_url %}
+                    <img class="img-fluid" src="{{ post.image_url }}" alt="image post">
+                  {% else %}
+                    <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="default image">
+                  {% endif %}
+                  <ul class="thumb-info" style="max-width: 550px;">
+                    <li><a href="#"><i class="ti-user"></i>{{ post.author }}</a></li>
+                    <li><a href="#"><i class="ti-notepad"></i>{{ post.published_at }}</a></li>
+                    <li><a href="#"><i class="ti-themify-favicon"></i>{{ post.comments_amount }}</a></li>
+                  </ul>
+                </div>
+                <div class="details mt-20">
+                  <h3>{{ post.title }}</h3>
+                  <p>{{ post.text|truncatechars:200 }}</p>
+                  <a class="button" href="{% url 'post_detail' post.slug %}">Read More <i class="ti-arrow-right"></i></a>
+                </div>
               </div>
-              <div class="details mt-20">
-                <h3>{{ fresh_posts.0.title }}</h3>
-                <p>{{ fresh_posts.0.text|truncatechars:200 }}</p>
-                <a class="button" href="{% url 'post_detail' fresh_posts.0.slug %}">Read More <i class="ti-arrow-right"></i></a>
-              </div>
-            </div>
-
-            <div class="single-recent-blog-post">
-              <div class="thumb">
-                {% if fresh_posts.1.image_url %}
-                  <img class="img-fluid" src="{{ fresh_posts.1.image_url }}" alt="image post">
-                {% else %}
-                  <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="default image">
-                {% endif %}
-                <ul class="thumb-info" style="max-width: 550px;">
-                  <li><a href="#"><i class="ti-user"></i>{{ fresh_posts.1.author }}</a></li>
-                  <li><a href="#"><i class="ti-notepad"></i>{{ fresh_posts.1.published_at }}</a></li>
-                  <li><a href="#"><i class="ti-themify-favicon"></i>{{ fresh_posts.1.comments_amount }}</a></li>
-                </ul>
-              </div>
-              <div class="details mt-20">
-              <h3>{{ fresh_posts.1.title }}</h3>
-                <p>{{ fresh_posts.1.text|truncatechars:200 }}</p>
-                <a class="button" href="{% url 'post_detail' fresh_posts.1.slug %}">Read More <i class="ti-arrow-right"></i></a>
-              </div>
-            </div>
-
-
-            <div class="single-recent-blog-post">
-              <div class="thumb">
-                {% if fresh_posts.2.image_url %}
-                  <img class="img-fluid" src="{{ fresh_posts.2.image_url }}" alt="image post">
-                {% else %}
-                  <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="default image">
-                {% endif %}
-                <ul class="thumb-info" style="max-width: 550px;">
-                  <li><a href="#"><i class="ti-user"></i>{{ fresh_posts.2.author }}</a></li>
-                  <li><a href="#"><i class="ti-notepad"></i>{{ fresh_posts.2.published_at }}</a></li>
-                  <li><a href="#"><i class="ti-themify-favicon"></i>{{ fresh_posts.2.comments_amount }}</a></li>
-                </ul>
-              </div>
-              <div class="details mt-20">
-                <h3>{{ fresh_posts.2.title }}</h3>
-                <p>{{ fresh_posts.2.text|truncatechars:200 }}</p>
-                <a class="button" href="{% url 'post_detail' fresh_posts.2.slug %}">Read More <i class="ti-arrow-right"></i></a>
-              </div>
-            </div>
-
-            <div class="single-recent-blog-post">
-              <div class="thumb">
-                {% if fresh_posts.3.image_url %}
-                  <img class="img-fluid" src="{{ fresh_posts.3.image_url }}" alt="image post">
-                {% else %}
-                  <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="default image">
-                {% endif %}
-                <ul class="thumb-info" style="max-width: 550px;">
-                  <li><a href="#"><i class="ti-user"></i>{{ fresh_posts.3.author }}</a></li>
-                  <li><a href="#"><i class="ti-notepad"></i>{{ fresh_posts.3.published_at }}</a></li>
-                  <li><a href="#"><i class="ti-themify-favicon"></i>{{ fresh_posts.3.comments_amount }}</a></li>
-                </ul>
-              </div>
-              <div class="details mt-20">
-                <h3>{{ fresh_posts.3.title }}</h3>
-                <p>{{ fresh_posts.3.text|truncatechars:200 }}</p>
-                <a class="button" href="{% url 'post_detail' fresh_posts.3.slug %}">Read More <i class="ti-arrow-right"></i></a>
-              </div>
-            </div>
-
-            <div class="single-recent-blog-post">
-              <div class="thumb">
-                {% if fresh_posts.4.image_url %}
-                  <img class="img-fluid" src="{{ fresh_posts.4.image_url }}" alt="image post">
-                {% else %}
-                  <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="default image">
-                {% endif %}
-                <ul class="thumb-info" style="max-width: 550px;">
-                  <li><a href="#"><i class="ti-user"></i>{{ fresh_posts.4.author }}</a></li>
-                  <li><a href="#"><i class="ti-notepad"></i>{{ fresh_posts.4.published_at }}</a></li>
-                  <li><a href="#"><i class="ti-themify-favicon"></i>{{ fresh_posts.4.comments_amount }}</a></li>
-                </ul>
-              </div>
-              <div class="details mt-20">
-                <h3>{{ fresh_posts.4.title }}</h3>
-                <p>{{ fresh_posts.4.text|truncatechars:200 }}</p>
-                <a class="button" href="{% url 'post_detail' fresh_posts.4.slug %}">Read More <i class="ti-arrow-right"></i></a>
-              </div>
-            </div>
+            {% endfor %}
             
 
             <div class="row">
